fix label on mobile

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -47,6 +47,7 @@ body {
   left: 50%;
   font-size: 30px;
   transform: translateX(-50%);
+  width: calc(100% - 64px);
 }
 
 .Main__date {
@@ -83,6 +84,7 @@ body {
 @media screen and (max-width: 768px) {
   .Main__caption {
     font-size: 20px;
+    bottom: 10%;
   }
 
   .Main__button {
